<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_tv"
        android:text="@string/settings_header"
        android:textSize="30dp"
        android:gravity="center"/>

    <!-- No longer used, just for spacing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/music_layout"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/settings_tv"
        android:layout_marginTop="150dp">

    </LinearLayout>

    <!-- Player name input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/player_name_layout"
        android:layout_below="@+id/music_layout"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name_tv"
            android:text="@string/player_name"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_hint"
            android:layout_weight="1"
            android:hint="@string/enter_name_here"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_name"
        android:text="@string/save_name"
        android:textSize="20dp"
        android:layout_below="@id/player_name_layout"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_stats"
        android:layout_below="@+id/set_name"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_game_stats"
        android:textSize="20dp"
        android:layout_marginTop="25dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_select"
        android:layout_below="@+id/reset_stats"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:entries="@array/languages_array" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#B3ABAB"
        android:padding="8dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homeBtn"
            android:textSize="10dp"
            android:id="@+id/to_home" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upgradesBtn"
            android:textSize="10dp"
            android:id="@+id/to_upgrades" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leadersBtn"
            android:textSize="10dp"
            android:id="@+id/to_leaderboard" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsBtn"
            android:textSize="10dp"
            android:id="@+id/to_settings" />
    </LinearLayout>
</RelativeLayout>