<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leader_board"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/leader_header"/>

    <!-- 1st place -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leader_header"
        android:layout_marginTop="175dp"
        android:id="@+id/first_layout"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1: "
            android:textSize="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player name"
            android:textSize="35dp"
            android:id="@+id/first_player"/>
    </LinearLayout>

    <!-- 2nd player -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/second_layout"
        android:layout_below="@+id/first_layout"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2: "
            android:textSize="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player name"
            android:textSize="35dp"
            android:id="@+id/second_player"/>
    </LinearLayout>

    <!-- 3rd player -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/third_layout"
        android:layout_below="@+id/second_layout"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3: "
            android:textSize="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player name"
            android:textSize="35dp"
            android:id="@+id/third_player"/>
    </LinearLayout>

    <!-- 4th player -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/third_layout"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4: "
            android:textSize="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player name"
            android:textSize="35dp"
            android:id="@+id/fourth_player"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#B3ABAB"
        android:padding="8dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homeBtn"
            android:textSize="10dp"
            android:id="@+id/to_home" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upgradesBtn"
            android:textSize="10dp"
            android:id="@+id/to_upgrades" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leadersBtn"
            android:textSize="10dp"
            android:id="@+id/to_leaderboard" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsBtn"
            android:textSize="10dp"
            android:id="@+id/to_settings" />
    </LinearLayout>
</RelativeLayout>